fixed nav/ improved username display visibility

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -482,19 +482,19 @@ footer tab {
 
 #username {
     color: rgba(255, 255, 255, 1);
-    padding-bottom: 12px;
+    padding-bottom: 9px;
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 16px;
+    font-size: 20px;
     border:none;
-    border-right: 1px solid;
+    /*border-right: 1px solid;*/
     float: left;
-    background-color: #1474E1; background-image: -webkit-gradient(linear, left top, left bottom, from(#1474E1), to(#1160BA));
-    background-image: -webkit-linear-gradient(top, #1474E1, #1160BA);
-    background-image: -moz-linear-gradient(top, #1474E1, #1160BA);
-    background-image: -ms-linear-gradient(top, #1474E1, #1160BA);
-    background-image: -o-linear-gradient(top, #1474E1, #1160BA);
-    background-image: linear-gradient(to bottom, #1474E1, #1160BA);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#1474E1, endColorstr=#1160BA);
+    background-color: #dd4646; background-image: -webkit-gradient(linear, left top, left bottom, from(#dd4646), to(#f99090));
+    background-image: -webkit-linear-gradient(top, #dd4646, #f99090);
+    background-image: -moz-linear-gradient(top, #dd4646, #f99090);
+    background-image: -ms-linear-gradient(top, #dd4646, #f99090);
+    background-image: -o-linear-gradient(top, #dd4646, #f99090);
+    background-image: linear-gradient(to bottom, #dd4646, #f99090);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#dd4646, endColorstr=#f99090);
 }
 
 .btn.btn-default.tut-btn:hover {
